# swiftide-bench-comparison

./: .gitignore  README.md  compose.yml  justfile
langchain/: pyproject.toml
langchain-bench/: pyproject.toml
langchain-bench/langchain_bench/: cli.py
llamaindex/: pyproject.toml
llamaindex-bench/: pyproject.toml
llamaindex-bench/llamaindex_bench/: cli.py
results/: rotten-tomatoes.json  rotten-tomatoes.md  rust-book.json  rust-book.md  swiftide-old-new-book.json  swiftide-old-new-rotten-tomatoes.json  swiftide-old-new-rotten-tomatoes.md  swiftide-old-new-rust-book.md
swiftide/: Cargo.toml
swiftide-bench/: Cargo.toml
swiftide-bench-other/: Cargo.toml
swiftide-bench-other/src/: main.rs
swiftide-bench/src/: main.rs
