[tool.poetry]
name = "langchain-bench"
version = "0.1.0"
description = ""
authors = ["Timon Vonk <timonv@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.scripts]
cli = "langchain_bench.cli:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
