[tool.poetry]
name = "langchain-bench"
version = "0.1.0"
description = ""
authors = ["Timon Vonk <timonv@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
langchain = "^0.2.16"
langchain-community = "^0.2.16"
fastembed = "^0.3.6"
langchain-qdrant = "^0.1.3"
argparse = "^1.4.0"
unstructured = { extras = ["markdown"], version = "^0.15.9" }
markdown = "^3.7"
datasets = "3.0.0"
uvloop = "^0.20"
pyflame = "^0.3.2"

[tool.poetry.scripts]
cli = "langchain_bench.cli:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
