[package]
name = "swiftide-bench-other"
version = "0.1.0"
edition = "2021"

[dependencies]
swiftide = { features = [
  "qdrant",
  "fastembed",
  "parquet",
  "openai",
], git = "https://github.com/bosun-ai/swiftide" }
clap = { version = "4.5.17", features = ["derive"] }
tokio = { version = "1.40.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
